--- a/web-wao/index.html
+++ b/web-wao/index.html
@@ -57,6 +57,9 @@
           <input type="button" id="fireEventBtn" value="Fire Event">
         </div>
         <!--Visualize automata section-->
+        <div id="paper">
+
+        </div>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
