adding vr support with three js

--- a/web-wao/index.html
+++ b/web-wao/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="overall">
@@ -13,6 +14,7 @@
       </div>
       <div id="sidebar">
         <div class="buffer">
+          <input type="button" id="fullscreenButton" value="Fullscreen">
           <!--Load section-->
           <div>
             <p>Load a GLTF or GLB Model</p>
